operator/src/main/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: default
spec:
  ports:
    - port: 5678
      name: http
  selector:
    app: echo
